# OpenSteward-MCP-Server

./: .env.example  .gitignore  .opensteward.yml  codex-recent-diff.txt  pyproject.toml  requirements.txt
src/opensteward/: __init__.py  app.py  models.py  review_cost.py  settings.py
src/opensteward/github/: __init__.py  app_jwt.py  assessments.py  contribution_inputs.py  historical_adrs.py  historical_knowledge.py  historical_paths.py  historical_snapshot.py  installation_tokens.py  models.py  pull_requests.py  related_work.py  repositories.py  rest_client.py  review_cost.py  runtime.py  settings.py
tests/: test_app.py  test_mcp_github_related_work.py  test_mcp_github_review_cost.py  test_mcp_policy.py  test_mcp_server.py  test_models.py  test_review_cost.py
tests/github/: test_app_jwt.py  test_historical_adrs.py  test_historical_knowledge.py  test_historical_paths.py  test_historical_snapshot.py  test_installation_tokens.py  test_models.py  test_related_work.py  test_related_work_runtime.py  test_repositories.py  test_rest_client.py  test_review_cost.py  test_review_cost_runtime.py  test_settings.py
tests/knowledge/: __init__.py  test_decision_candidates.py  test_decision_resolution.py  test_hybrid_ranking.py  test_lexical.py  test_lexical_search.py  test_models.py  test_related_work.py  test_semantic_scoring.py
tests/policy/: test_defaults.py  test_evaluator.py  test_inputs.py  test_loader.py  test_models.py  test_packet.py  test_path_matcher.py  test_provenance.py
tests/review_intelligence/: __init__.py  test_models.py  test_scoring.py
(+25 files in other folders)
