[project]
name = "opensteward"
version = "0.1.0"
description = "MCP-based maintainer intelligence for open-source projects"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "mcp[cli]==1.28.1",
    "fastapi>=0.116,<1",
    "uvicorn[standard]>=0.35,<1",
    "pydantic-settings>=2.10,<3",
    "PyYAML>=6.0.3,<7"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[project.scripts]
opensteward = "opensteward.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensteward"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
